--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -11,7 +11,8 @@
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   font-size: 15px;
   font-weight: 500;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 100;
 }
 
 .header__column-logo {
