--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
 @import "components/screen-header.css";
 @import "components/screen-footer.css";
 @import "components/course__box.css";
+@import "components/challenge__box.css";
+
 /* screens */
 @import "screens/login.css";
 @import "screens/main.css";
@@ -14,5 +16,4 @@ body {
   font-family: "Roboto", sans-serif;
   color: #2e363e;
   padding-top: 150px;
-  height: 1000vh;
 }
