--- a/css/components/challenge__box.css
+++ b/css/components/challenge__box.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   margin: 80px 0 65px 0;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .challenge__box {
@@ -18,7 +19,7 @@
   border-radius: 8px;
   padding: 30px 20px 20px;
   box-sizing: border-box;
-  margin: 0 auto;
+  margin: 0 auto 100px;
 }
 
 .challenge__title {
