--- a/css/components/course__box.css
+++ b/css/components/course__box.css
@@ -1,11 +1,17 @@
 .courses__carrier {
+  position: relative;
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 230px;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  padding: 0 150px;
+}
+
+.course__box {
+  margin: 0 auto 120px;
 }
 
 .course__img {
-  position: absolute;
   width: 380px;
   height: 215px;
   border-radius: 8px;
@@ -14,11 +20,10 @@
 }
 
 .course__summary {
-  position: relative;
+  position: absolute;
   width: 350px;
   height: 105px;
-  top: 150px;
-  left: 15px;
+  margin: -60px 15px;
   background-color: white;
   text-align: center;
   border-radius: 8px;
